--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,54 +1,25 @@
-<manifest
-	xmlns:android="http://schemas.android.com/apk/res/android"
-	package="com.whymarrh.apps.morsecode"
-	android:versionCode="1"
-	android:versionName="0.9.5">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.coffeeandcookies.hodorcode"
+    android:versionCode="1"
+    android:versionName="1" >
 
-	<supports-screens
-		android:smallScreens="false"
-		android:normalScreens="true"
-		android:largeScreens="false"
-		android:xlargeScreens="false"
-		android:resizeable="true"
-		android:anyDensity="true"
-	/>
+    <application android:label="@string/app_name" >
+        <service
+            android:name="HodorCodeIME"
+            android:label="@string/app_name"
+            android:permission="android.permission.BIND_INPUT_METHOD" >
+            <intent-filter>
+                <action android:name="android.view.InputMethod" />
+            </intent-filter>
 
-	<compatible-screens>
-		<screen android:screenSize="normal" android:screenDensity="ldpi" />
-		<screen android:screenSize="normal" android:screenDensity="mdpi" />
-		<screen android:screenSize="normal" android:screenDensity="hdpi" />
-		<screen android:screenSize="normal" android:screenDensity="xhdpi" />
-	</compatible-screens>
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method" />
+        </service>
+    </application>
 
-	<uses-permission android:name="android.permission.VIBRATE" />
-
-	<application android:label="@string/morse_code">
-		<service
-			android:name="MorseCodeIME"
-			android:label="@string/morse_code"
-			android:permission="android.permission.BIND_INPUT_METHOD">
-			<intent-filter>
-				<action android:name="android.view.InputMethod" />
-			</intent-filter>
-			<meta-data android:name="android.view.im" android:resource="@xml/method" />
-		</service>
-		<activity
-			android:name="Reference"
-			android:label="@string/ime_reference">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-			</intent-filter>
-		</activity>
-		<activity
-			android:name="Preferences"
-			android:label="@string/ime_preferences"
-			android:theme="@style/preferences">
-			<intent-filter>
-				<action android:name="android.intent.action.MAIN" />
-			</intent-filter>
-		</activity>
-	</application>
-
-	<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
 
 </manifest>
