--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,17 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.coffeeandcookies.hodorcode"
+    android:installLocation="internalOnly"
     android:versionCode="1"
     android:versionName="1" >
 
-    <application android:label="@string/app_name" >
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="19" />
+
+    <application
+        android:allowBackup="true"
+        android:icon="@drawable/ic_launcher"
+        android:label="@string/app_name" >
         <service
             android:name="HodorCodeIME"
             android:label="@string/app_name"
@@ -17,9 +25,5 @@
                 android:resource="@xml/method" />
         </service>
     </application>
-
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
 
 </manifest>
